# robotic_manipulation_course

./: TranLOs.txt
ManipulationCourseSolution_withReports/exercise3_optional/exercise3_optional_jonathan/: CMakeLists.txt
ManipulationCourseSolution_withReports/exercise3_optional/exercise3_optional_jonathan/launch/: pose_estimation.launch  publish_frames.launch
ManipulationCourseSolution_withReports/exercise3_optional/exercise3_optional_jonathan/model/robots/: sim.urdf.xacro
ManipulationCourseSolution_withReports/exercise3_optional/exercise3_optional_jonathan/src/: pose_estimation.cpp
ManipulationCourseSolution_withReports/exercise3_optional/exercise3_optional_kim/: package.xml
ManipulationCourseSolution_withReports/exercise3_optional/exercise3_optional_kim/include/exercise3_optional/: functions.h
ManipulationCourseSolution_withReports/exercise3_optional/exercise3_optional_kim/model/robots/: sim.urdf
ManipulationCourseSolution_withReports/exercise3_optional/exercise3_optional_kim/src/: pose_estimation.cpp
ManipulationCourseSolution_withReports/scripts/: build_ros_ws.py  git_output.txt  push_results.py  update_repos.py  username.txt
exercise1/src/: ros_intro.cpp
exercise2/src/: plan.cpp
exercise3_pepception/launch/: publish_frames.launch
exercise3_pepception/src/: pose_estimation.cpp
exercise4/src/: run.cpp
exercise5/data/: grasp_data.txt
exercise5/src/: Exercise5Controller.cpp  GraspPlanning.py
quizzes/: Quiz 1 - Kinematics_ Attempt review _ MyCourses.html  Quiz 2 - Motion planning (+review)_ Attempt review _ MyCourses.html  Quiz 3 - Motion control_ Attempt review _ MyCourses.html  Quiz 4 - Control in contact_ Attempt review _ MyCourses.html  Quiz 5 - Manipulation_ Attempt review _ MyCourses.html  Quiz 6 - Friction and grasping + closed kinematic chains_ Attempt review _ MyCourses.html  Quiz 7 - Closed kinematic chains + redundancy_ Attempt review _ MyCourses.html  Quiz 8 - Learning in manipulation_ Attempt review _ MyCourses.html
roboticmanipulationdocker/: Dockerfile  README.md  bash_aliases.sh  compose.yaml  entrypoint.sh  notes.md  tmux.conf
(+56 files in other folders)
