<?xml version="1.0"?>
<package format="2">
    <name>exercise3_optional</name>
    <version>0.0.1</version>
    <description>
        Package exercise3_optional.
    </description>
    <maintainer email="jens.lundell@aalto.fi">Jens Lundell</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>moveit_core</depend>
    <depend>moveit_visual_tools</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
    <build_depend>libpcl-all-dev</build_depend>
    <exec_depend>libpcl-all</exec_depend>
</package>
